feat: added title field to Note entity